[gd_scene load_steps=6 format=3 uid="uid://od4wx8e63ien"]

[ext_resource type="Script" path="res://scripts/nexus.gd" id="1_pw3gp"]
[ext_resource type="Texture2D" uid="uid://ce4ow253bn715" path="res://art/citadel.png" id="2_7m1qk"]
[ext_resource type="PackedScene" uid="uid://bthsr3u3p0tqt" path="res://scenes/health_bar.tscn" id="3_quns7"]
[ext_resource type="PackedScene" uid="uid://c3l2lnb8nbuhb" path="res://scenes/mana_bar.tscn" id="4_5dqeo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yimb"]
size = Vector2(126, 126)

[node name="nexus" type="StaticBody2D"]
script = ExtResource("1_pw3gp")

[node name="teamcoloricon" type="Polygon2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(100, 100)
polygon = PackedVector2Array(0.63, 0.28, 0.63, -0.36, 0.36, -0.62, -0.32, -0.62, -0.62, -0.34, -0.62, 0.34, -0.33, 0.62, 0.32, 0.62)

[node name="castleicon" type="Sprite2D" parent="."]
scale = Vector2(1.06378, 1.06378)
texture = ExtResource("2_7m1qk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1yimb")

[node name="hitbox_area" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox_area"]
shape = SubResource("RectangleShape2D_1yimb")

[node name="health_bar" parent="." instance=ExtResource("3_quns7")]
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = -62.0

[node name="mana_bar" parent="." instance=ExtResource("4_5dqeo")]
offset_left = -50.0
offset_top = -62.0
offset_right = 50.0
offset_bottom = -54.0

[connection signal="value_changed" from="health_bar" to="." method="_on_health_bar_value_changed"]
